About and Home edits

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,6 +7,8 @@
     text-align: center;
     background-attachment: fixed;
     background-size: cover;
+    height: 100%;
+    width: 100%;
     background-position: center;
 }
 .jumbotron-btns {
