--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,9 +7,11 @@
     text-align: center;
     background-attachment: fixed;
     background-size: cover;
-    height: 100%;
-    width: 100%;
+    height: 100vh; 
+    width: 100vw;
     background-position: center;
+    margin: 0;
+    padding: 0;
 }
 .jumbotron-btns {
   display: block;
