Home page edits

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -31,12 +31,12 @@
   <p class="lead" id="typewriteText"></p>
 
   <!-- uncomment/modify buttons as you want-->
-  <div class="jumbotron-btns">
+  <!-- <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
-      <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
+      <button class="btn btn-md btn-warning"> <strong></strong> </button>
     </a>
     <a id="olvy-target">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
-     </a>
+     </a> -->
   </div>
 </div>
