home and about edits

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -31,12 +31,12 @@
   <p class="lead" id="typewriteText"></p>
 
   <!-- uncomment/modify buttons as you want-->
-  <!-- <div class="jumbotron-btns">
-    <a href="{{site.url}}{{site.baseurl}}/get-started">
+  <div class="jumbotron-btns">
+    <a href="{{site.url}}{{site.baseurl}}/about">
       <button class="btn btn-md btn-warning"> <strong></strong> </button>
     </a>
     <a id="olvy-target">
-      <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
-     </a> -->
+      <button class="btn btn-md btn-default"> <strong>Know More</strong> </button>
+     </a>
   </div>
 </div>
