--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -33,10 +33,7 @@
   <!-- uncomment/modify buttons as you want-->
   <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/about">
-      <button class="btn btn-md btn-warning"> <strong></strong> </button>
+      <button class="btn btn-md btn-warning"> <strong>Know More</strong> </button>
     </a>
-    <a id="olvy-target">
-      <button class="btn btn-md btn-default"> <strong>Know More</strong> </button>
-     </a>
   </div>
 </div>
