--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -122,14 +122,14 @@ layout: default
       == true %}
       
       <div class="col-md-8 mb-4" id="project-card">
-        <div class="col-md-8 d-flex align-items-stretch">
-          <div class="col-md-4">
+        <div class="row-md-8 d-flex align-items-stretch">
+          <div class="col-md-12">
             <img
             src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
             class="project-img"
           />
           </div>
-          <div class="col-md-8 d-flex flex-column justify-content-between">
+          <div class="col-md-12 d-flex flex-column justify-content-between">
             <h4 class="experience-title">{{ project.project_title }}</h4>
             <h6 class="experience-info">{{ project.project_info }}</h6>
             <p class="experience-desc">{{ project.project_description }}</p>
