--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -122,8 +122,8 @@ layout: default
       == true %}
       
       <div class="col-md-8 mb-4" id="project-card">
-        <div class="row-md-8 d-flex align-items-stretch">
-          <div class="col-md-12">
+        <div class="row d-flex align-items-stretch">
+          <div class="col-md-12 d-flex">
             <img
             src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}"
             class="project-img"
